Implemented token based login routine.