@@ -4,9 +4,9 @@ import net.berndreiss.zentodo.OperationType;
 import net.berndreiss.zentodo.data.OperationHandler;
 import net.berndreiss.zentodo.data.ClientOperationHandler;
 import net.berndreiss.zentodo.data.Entry;
+import net.berndreiss.zentodo.data.User;
 
 import java.net.URI;
-import java.net.URL;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
@@ -20,181 +20,130 @@ import java.util.List;
  */
 public class ClientStub implements OperationHandler {
 
-    public static String token;
-
+    private String email;
+    private String userName;
     private final ClientOperationHandler dbHandler;
-    private final String user;
     private List<ClientOperationHandler> otherHandlers = null;
     private ExceptionHandler exceptionHandler;
     private HttpClient client;
     public static final String SERVER = "http://localhost:8080/";
 
     public static void main(String[] args){
-        new ClientStub("bd_reiss@gmx.at", new ClientOperationHandler() {
-            @Override
-            public void updateId(int entry, int id) {
 
-            }
+        TestDbHandler dbTestHandler = new TestDbHandler("ZenToDoPU");
 
-            @Override
-            public void setTimeDelay(long delay) {
-
-            }
-
-            @Override
-            public void addToQueue(OperationType type, List<Object> arguments) {
-
-            }
-
-            @Override
-            public List<ZenMessage> geQueued() {
-                return List.of();
-            }
-
-            @Override
-            public String getToken(String user) {
-                return ClientStub.token;
-            }
-
-            @Override
-            public void setToken(String user, String token) {
-                ClientStub.token = token;
-            }
-
-            @Override
-            public void post(List<Entry> entries) {
-
-            }
-
-            @Override
-            public void addNewEntry(int id, String task) {
-
-            }
-
-            @Override
-            public void delete(int id) {
-
-            }
-
-            @Override
-            public void swapEntries(int id, int position) {
-
-            }
-
-            @Override
-            public void swapListEntries(int id, int position) {
-
-            }
-
-            @Override
-            public void updateTask(int id, String value) {
-
-            }
-
-            @Override
-            public void updateFocus(int id, int value) {
-
-            }
-
-            @Override
-            public void updateDropped(int id, int value) {
-
-            }
-
-            @Override
-            public void updateList(int id, String value, int position) {
-
-            }
-
-            @Override
-            public void updateReminderDate(int id, Long value) {
-
-            }
-
-            @Override
-            public void updateRecurrence(int id, Long reminderDate, String value) {
-
-            }
-
-            @Override
-            public void updateListColor(String list, String color) {
-
-            }
-        }, Throwable::printStackTrace);
+        new ClientStub("bd_reiss@gmx.at", dbTestHandler, Throwable::printStackTrace);
+        //dbTestHandler.addNewEntry(2L, "Test", null);
+        dbTestHandler.close();
     }
 
-    public ClientStub(String user, ClientOperationHandler dbHandler){
-        this(user, dbHandler, null, null);
+    public ClientStub(String email, ClientOperationHandler dbHandler){
+        this(email, null, dbHandler, null, null);
     }
-    public ClientStub(String user, ClientOperationHandler dbHandler, ExceptionHandler exceptionHandler){
-        this(user, dbHandler, null, exceptionHandler);
+    public ClientStub(String email, String userName, ClientOperationHandler dbHandler){
+        this(email, userName, dbHandler, null, null);
     }
-    public ClientStub(String user, ClientOperationHandler dbHandler, List<ClientOperationHandler> otherHandlers){
-        this(user, dbHandler, otherHandlers, null);
+    public ClientStub(String email, ClientOperationHandler dbHandler, ExceptionHandler exceptionHandler){
+        this(email, null, dbHandler, null, exceptionHandler);
     }
-    public ClientStub(String user, ClientOperationHandler dbHandler, List<ClientOperationHandler> otherHandlers, ExceptionHandler exceptionHandler){
-        this.user = user;
+    public ClientStub(String email, String userName, ClientOperationHandler dbHandler, ExceptionHandler exceptionHandler){
+        this(email, userName, dbHandler, null, exceptionHandler);
+    }
+    public ClientStub(String email, ClientOperationHandler dbHandler, List<ClientOperationHandler> otherHandlers){
+        this(email, null, dbHandler, otherHandlers, null);
+    }
+    public ClientStub(String email, String userName, ClientOperationHandler dbHandler, List<ClientOperationHandler> otherHandlers){
+        this(email, userName, dbHandler, otherHandlers, null);
+    }
+    public ClientStub(String email, String userName, ClientOperationHandler dbHandler, List<ClientOperationHandler> otherHandlers, ExceptionHandler exceptionHandler){
+        this.email = email;
+        this.userName = userName;
         this.dbHandler = dbHandler;
         this.otherHandlers = otherHandlers;
         this.exceptionHandler = exceptionHandler;
         client = HttpClient.newBuilder().build();
         try {
-            URL url = new URL("https://zentodo.berndreiss.net");
+            User user = dbHandler.getUserByEmail(email);
+            if (user == null || !user.getEnabled()) {
+                String loginRequest = getLoginRequest(email, "test");//TODO handle password
+                HttpRequest request = HttpRequest.newBuilder()
+                        .uri(URI.create(SERVER +"auth/register"))
+                        .header("Content-Type", "application/json")
+                        .POST(HttpRequest.BodyPublishers.ofString(loginRequest, StandardCharsets.UTF_8))
+                        .build();
+
+                HttpResponse<String> response;
+                int attempts = 0;
+                while (attempts++ < 10){
+                    response = client.send(request, HttpResponse.BodyHandlers.ofString());
+                    if (response.statusCode() == 200){
+
+                        if (response.body().equals("enabled")){
+                            System.out.println("ENABLE USER.");
+                            dbHandler.enableUser(email);
+                            break;
+                        }
+                        if (response.body().equals("exists")) {
+                            System.out.println("USER ALREADY EXISTS, BUT WAS NOT VERIFIED. CHECK YOUR MAILS.");
+                            return;//TODO HANDLE USER ALREADY EXISTS
+                        }
+                        dbHandler.addUser(Long.parseLong(response.body()), email, userName);
+                        System.out.println("USER WAS REGISTERED, BUT WAS NOT VERIFIED. CHECK YOUR MAILS.");
+                        return ;//TODO HANDLE SUCCESS
+                    }
+                }
+            }
+
+            assert user != null;
+            String token = dbHandler.getToken(user.getId());
+
+            if (token == null) {
+                String loginRequest = getLoginRequest(email, "test");//TODO handle password
+                HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(SERVER + "auth/login"))
+                    .header("Content-Type", "application/json")
+                    .POST(HttpRequest.BodyPublishers.ofString(loginRequest, StandardCharsets.UTF_8))
+                    .build();
+
+                HttpResponse<String> response = null;
+                int attempts = 0;
+                while (attempts++ < 10) {
+                    response = client.send(request, HttpResponse.BodyHandlers.ofString());
+                    if (response.statusCode() == 200) {
+                        dbHandler.setToken(user.getId(), response.body());
+                        System.out.println("RECEIVED A TOKEN AND LOGGED IN.");
+                        break;
+                    }
+                }
+            }
+            HttpRequest request = HttpRequest.newBuilder().uri(URI.create(SERVER + "test")).header("Content-Type", "application/json").header("Authorization", "Bearer " + dbHandler.getToken(user.getId())).GET().build();
+
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+
+            System.out.println(response);
+
+            //TODO SET CLOCK
+
+            //TODO SEND QUEUE ITEMS TO SERVER
+
+            /**
             List<Object> arguments = new ArrayList<>();
             arguments.add(3);
             arguments.add(1);
             arguments.add("Test");
-
-
             ZenMessage message = new ZenMessage(OperationType.POST, arguments);
             String jsonInput = jsonify(message);
-
-
-            System.out.println(jsonInput);
-            //HttpRequest request = HttpRequest.newBuilder().uri(URI.create("https://zentodo.berndreiss.net")).GET().build();
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create("http://localhost:8080/auth/register?email=bd_reiss@gmx.at&password=test"))
-                    .header("Content-Type", "application/json")
-                    .POST(HttpRequest.BodyPublishers.ofString(jsonInput, StandardCharsets.UTF_8))
-                    .build();
+            HttpRequest request = HttpRequest.newBuilder().uri(URI.create(SERVER + "add")).header("Content-Type", "application/json").header("Authorization", "Bearer " + dbHandler.getToken(user.getId())).POST(HttpRequest.BodyPublishers.ofString(jsonInput, StandardCharsets.UTF_8)).build();
 
             HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
 
             System.out.println(response);
             System.out.println(response.body());
-
-            String authJson = "{\"email\":\"bd_reiss@gmx.at\", \"password\":\"test\"}";
-
-            request = HttpRequest.newBuilder()
-                    .uri(URI.create(SERVER + "auth/login"))
-                    .header("Content-Type", "application/json")
-                    .header("Authorization", getAuthHeader("bd_reiss@gmx.at", "test"))
-                    .POST(HttpRequest.BodyPublishers.ofString(authJson, StandardCharsets.UTF_8))
-                    .build();
-
-            response = client.send(request, HttpResponse.BodyHandlers.ofString());
-
-            System.out.println(response);
-            System.out.println(response.body());
-
-            token = response.body();
-            request = HttpRequest.newBuilder().uri(URI.create(SERVER + "add")).header("Content-Type", "application/json").header("Authorization", "Bearer " + token).POST(HttpRequest.BodyPublishers.ofString(jsonInput, StandardCharsets.UTF_8)).build();
-            response = client.send(request, HttpResponse.BodyHandlers.ofString());
-
-            System.out.println(response);
-            System.out.println(response.body());
-
+*/
         } catch (Exception e) {
             exceptionHandler.handle(e);
         }
 
-        //TODO HANDLE REGISTRATION
-
-        //TODO AUTHENTICATE
-
-        //TODO SET CLOCK
-
-        //TODO SEND QUEUE ITEMS TO SERVER
 
     }
 
@@ -203,6 +152,11 @@ public class ClientStub implements OperationHandler {
         String encodedAuth = Base64.getEncoder().encodeToString((email + ":" + password).getBytes(StandardCharsets.UTF_8));
         return "Basic " + encodedAuth;
     }
+
+    private String getLoginRequest(String email, String password){
+        return "{\"email\": \"" + email + "\", \"password\": \"" + password + "\"}";
+    }
+
     public String jsonify(ZenMessage message){
         StringBuilder sb = new StringBuilder();
 
@@ -234,52 +188,52 @@ public class ClientStub implements OperationHandler {
     }
 
     @Override
-    public void addNewEntry(int id, String task) {
+    public void addNewEntry(long id, String task, Long userId) {
 
     }
 
     @Override
-    public void delete(int id) {
+    public void delete(long id) {
 
     }
 
     @Override
-    public void swapEntries(int id, int position) {
+    public void swapEntries(long id, int position) {
 
     }
 
     @Override
-    public void swapListEntries(int id, int position) {
+    public void swapListEntries(long id, int position) {
 
     }
 
     @Override
-    public void updateTask(int id, String value) {
+    public void updateTask(long id, String value) {
 
     }
 
     @Override
-    public void updateFocus(int id, int value) {
+    public void updateFocus(long id, int value) {
 
     }
 
     @Override
-    public void updateDropped(int id, int value) {
+    public void updateDropped(long id, int value) {
 
     }
 
     @Override
-    public void updateList(int id, String value, int position) {
+    public void updateList(long id, String value, int position) {
 
     }
 
     @Override
-    public void updateReminderDate(int id, Long value) {
+    public void updateReminderDate(long id, Long value) {
 
     }
 
     @Override
-    public void updateRecurrence(int id, Long reminderDate, String value) {
+    public void updateRecurrence(long id, Long reminderDate, String value) {
 
     }
 
